Added pymatgen to requirements.

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ dash-renderer
 dash-html-components
 dash-core-components
 pandas
+pymatgen
 gunicorn
 Flask-Caching
 -e git://github.com/materialsintelligence/ChemDataExtractor#egg=chemdataextractor
